2005-09-27 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: Even More work on preferences dialog window.

2005-09-26 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: Even More work on preferences dialog window.

2005-09-26 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: More work on preferences dialog window.

2005-09-25 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/p12x.cc, src/p12x.h, src/p16x5x.cc, src/p16x5x.h,
	src/pic-processor.h, src/pic-processor.cc:
	Added support for the 16C56 and the 10F200.
	
2005-09-23 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc: Breakpoint numbers are now printed in decimal.

2005-09-23 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/ui_gpsim.cc: Fixed a bug were a reused string was
	not being cleared before being appended to.

	*gui/gui_symbols.cc: Added code snippet to truncate
	multi-line symbol values.

2005-09-21 J.R. Heisey <jrheisey@sourceforge.com>
	* src/cod.cc: Added an extra test to prevent a error message
	from displaying when a non cod file attempted. This really
	should validate that the file is a cod file earlier.

2005-09-20 Scott Dattalo <scott@dattalo.com>
	* gui/gui_regwin.cc: GUIRegisterList.register_size was being set
	improperly.

2005-09-20 J.R. Heisey <jrheisey@sourceforge.com>
	* gui_processor.cc, gui_processor.h, gui_register.h,
	gui_regwin.cc, gui_watch.cc: Made changes in Register_Window
	to and other code to support EEPROM memory window in the
	same way we now support RAM memory window.

2005-09-19 Scott Dattalo <scott@dattalo.com>
	* gui/preferences.cc, gui/preferences.h: New files to support user
	defined gui preferences.
	* gui/Makefile.am, gui/gui.h, gui/gui_main.cc, gui/gui_menu.cc,
	gui/gui_regwin.cc, gui/gui_watch.cc: Updates to support user
	defined preferences.

2005-09-17 Scott Dattalo <scott@dattalo.com>
	* src/14bit-tmrs.cc, src/16bit-registers.cc,
	src/16bit-registers.h, src/ssp.cc, src/uart.cc, src/uart.h: